--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,14 @@
 .app {
   width: 100%;
-  
+}
+
+.title {
+  margin-top: 0;
+margin-left: 35%;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 600;
+font-size: 42px;
+line-height: 54px;
+color: #000000;
 }
