--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,8 +3,8 @@
 }
 
 .title {
-  margin-top: 0;
-margin-left: 35%;
+padding-bottom: 5%;
+margin-left: 43%;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 600;
