--- a/src/components/products/Hardwoods/hardwoods.module.css
+++ b/src/components/products/Hardwoods/hardwoods.module.css
@@ -3,20 +3,33 @@
   height: 734px;
   background: #FFFFFF;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
+  margin-left: 5%;
+  margin-top: 2%;
+  border-radius: 20px;
 }
 
 .title {
-
+  font-family: 'Roboto';
 }
 
 .minititle {
-  
+  font-size: 24px;
+  font-family: 'Roboto';
 }
 
 .discription {
-
+  text-align: left;
+  font-size: 18px;
+  padding: 20px;
+  font-family: 'Roboto';
 }
 
 .price {
-  
+  font-style: oblique;
+  font-size: 19px;
+  font-family: 'Roboto';
+}
+
+bold {
+  color: orange;
 }
