--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -1,5 +1,17 @@
 .products {
-  display: flex;
-  text-align: center;
-  margin: 5%;
+display: flex;
+width: 100%;
+height: 790px;
+background: #EEEEEE;
+text-align: center;
+}
+
+.stick {
+position: absolute;
+width: 390px;
+left: 765px;
+top: 4255px;
+
+background: #E97F04;
+transform: matrix(1, 0, 0, -1, 0, 0);
 }
