--- a/src/components/discription/FireWoods/FireWoods.module.css
+++ b/src/components/discription/FireWoods/FireWoods.module.css
@@ -35,3 +35,27 @@ transform: matrix(1, 0, 0, -1, 0, 0);
   color: #FFFFFF;
   font-family: 'Roboto';
 }
+
+@media screen and (max-width: 2600px) and (min-width: 1600px) {
+
+}
+
+@media screen and (max-width: 1500px) {
+
+}
+
+@media screen and (max-width: 1100px) {
+
+}
+
+@media screen and (max-width: 800px) {
+
+}
+
+@media screen and (max-width: 500px) {
+
+}
+
+@media screen and (max-width: 400px) {
+
+}
