--- a/src/components/discription/firePlace/firePlace.module.css
+++ b/src/components/discription/firePlace/firePlace.module.css
@@ -30,3 +30,27 @@ font-size: 24px;
 line-height: 1.5em;
 text-align: left;
 }
+
+@media screen and (max-width: 2600px) and (min-width: 1600px) {
+
+}
+
+@media screen and (max-width: 1500px) {
+
+}
+
+@media screen and (max-width: 1100px) {
+
+}
+
+@media screen and (max-width: 800px) {
+
+}
+
+@media screen and (max-width: 500px) {
+
+}
+
+@media screen and (max-width: 400px) {
+
+}
