--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -11,8 +11,8 @@ color: #FFFFFF;
 }
 
 .contacts {
-  position: absolute;
-  left: 33em;
+  display: block;
+  margin-left: 240%;
   text-align: right;
   font-style: normal;
   font-weight: 700;
@@ -51,3 +51,71 @@ color: #FFFFFF;
   color: #FFFFFF;
   }
  
+  @media screen and (max-width: 2600px) and (min-width: 1600px) {      
+      .contacts {
+        margin-left: 62em;
+        }
+    }
+
+  @media screen and (max-width: 1500px) {      
+    .contacts {
+      left: 22em;
+      }
+  }
+
+  @media screen and (max-width: 1100px) {      
+    .contacts {
+      margin-left: 24em;
+      font-size: 26px;
+      }
+
+      .h2 {
+        left: 5%;
+        top: 8px;
+        font-size: 26px;
+        }
+
+        .p {
+          left: 5%;
+        }
+  }
+
+  @media screen and (max-width: 800px) {
+    .contacts {
+      margin-left: 19em;
+      font-size: 22px;
+      }
+
+      .h2 {
+        left: 10%;
+        font-size: 22px;
+        }
+
+      .p {
+        left: 10%;
+        font-size: 22px;
+      }
+  }
+
+
+  @media screen and (max-width: 500px) {
+    .contacts {
+      margin-left: 12em;
+      font-size: 16px;
+      }
+
+      .h2 {
+        left: 5%;
+        top: 6px;
+        font-size: 16px;
+        }
+
+      .p {
+        left: 5%;
+        top: 60px;
+        font-size: 16px;
+        font-weight: 100;
+        line-height: 28px;
+      }
+  }
+  
