--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -1,22 +1,15 @@
-.wrap {
-  background: #000;
-}
-
-
 .main {
   display: flex;
   margin-top: 0;
   padding-top: 0;
   height: 785px;
-  min-width: 100%;
-  min-height: 780px;
-  background-attachment: scroll;
+  width: 100%;
+  
   background: url(main_bg.png) no-repeat center center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;   
-        opacity: 0.6; 
 }
 
 .title {
@@ -36,13 +29,12 @@ color: #FFFFFF;
 .miniTitle {
   position: absolute;
   text-align: left;
-  top: 70%;
+  top: 75%;
   left: 12%;
   font-family: 'Roboto';
   color: #FFFFFF;
-  font-weight: 400;
   font-size: 40px;
-  opacity: 1;
+  font-weight: 800;
 }
 
 .stick {
@@ -53,5 +45,76 @@ left: 15%;
 top: 850px;
 background: #E97F04;
 transform: matrix(1, 0, 0, -1, 0, 0);
-opacity: 1;
+}
+
+@media screen and (max-width: 2600px) and (min-width: 1600px) {
+  .title {
+    top: 25%;
+    font-size: 9em;
+    left: 37%;
+  }
+
+  .miniTitle {
+    top: 59%;
+    font-size: 3em;
+    left: 21%;
+  }
+
+  .stick {
+    width: 90em;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .title {
+    top: 45%;
+    font-size: 6em;
+    left: 35%;
+  }
+
+  .miniTitle {
+    top: 89%;
+    font-size: 2em;
+    left: 19%;
+  }
+
+  .stick {
+    width: 40em;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .title {
+    top: 45%;
+    font-size: 5em;
+    left: 32%;
+  }
+
+  .miniTitle {
+    top: 85%;
+    font-size: 24px;
+    left: 17%;
+  }
+
+  .stick {
+    width: 30em;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .title {
+    top: 85%;
+    font-size: 4em;
+    left: 27%;
+  }
+
+  .miniTitle {
+    top: 20em;
+    font-size: 22px;
+    left: 15%;
+  }
+
+  .stick {
+    width: 15em;
+  }
 }
