--- a/src/components/products/Hardwoods/hardwoods.module.css
+++ b/src/components/products/Hardwoods/hardwoods.module.css
@@ -33,3 +33,27 @@
 bold {
   color: orange;
 }
+
+@media screen and (max-width: 2600px) and (min-width: 1600px) {
+
+}
+
+@media screen and (max-width: 1500px) {
+
+}
+
+@media screen and (max-width: 1100px) {
+
+}
+
+@media screen and (max-width: 800px) {
+
+}
+
+@media screen and (max-width: 500px) {
+
+}
+
+@media screen and (max-width: 400px) {
+
+}
