--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -15,3 +15,27 @@ top: 4255px;
 background: #E97F04;
 transform: matrix(1, 0, 0, -1, 0, 0);
 }
+
+@media screen and (max-width: 2600px) and (min-width: 1600px) {
+
+}
+
+@media screen and (max-width: 1500px) {
+
+}
+
+@media screen and (max-width: 1100px) {
+
+}
+
+@media screen and (max-width: 800px) {
+
+}
+
+@media screen and (max-width: 500px) {
+
+}
+
+@media screen and (max-width: 400px) {
+
+}
