--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -100,7 +100,7 @@ color: #FFFFFF;
 
   @media screen and (max-width: 500px) {
     .contacts {
-      margin-left: 12em;
+      margin-left: 13em;
       font-size: 13px;
       }
 
@@ -115,5 +115,6 @@ color: #FFFFFF;
         top: 60px;
         font-size: 16px;
         line-height: 28px;
+        width: 50px;
       }
   }
