--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
-  margin-top: 0;
-  padding-top: 0;
+  margin: 0;
+  padding: 0;
   height: 785px;
   width: 100%;
   
@@ -112,6 +112,7 @@ transform: matrix(1, 0, 0, -1, 0, 0);
     top: 22em;
     font-size: 22px;
     left: 15%;
+    text-align: center;
   }
 
   .stick {
