--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -113,6 +113,7 @@ transform: matrix(1, 0, 0, -1, 0, 0);
     font-size: 22px;
     left: 5%;
     text-align: center;
+    width: 200px;
   }
 
   .stick {
