--- a/src/components/about_us/about.module.css
+++ b/src/components/about_us/about.module.css
@@ -44,9 +44,22 @@ margin-top: 6em;
 }
 
 @media screen and (max-width: 500px) {
+  .about {
+    display: block;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    width: 300px;
+  }
 
-}
+  .title {
+    margin-top: 4em;
+    font-size: 24px;
+  }
 
-@media screen and (max-width: 400px) {
-
+  .bg {
+    width: 296px;
+    height: 140px;
+    margin-top: auto;
+  }
 }
