--- a/src/components/about_us/about.module.css
+++ b/src/components/about_us/about.module.css
@@ -47,9 +47,10 @@ margin-top: 6em;
   .about {
     display: block;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: 200;
     line-height: 24px;
-    width: 300px;
+    width: 200px;
+    margin-left: 0;
   }
 
   .title {
@@ -58,8 +59,9 @@ margin-top: 6em;
   }
 
   .bg {
-    width: 296px;
-    height: 140px;
+    width: 390px;
+    height: 240px;
     margin-top: auto;
+    margin-left: 10px;
   }
 }
