--- a/src/components/about_us/about.module.css
+++ b/src/components/about_us/about.module.css
@@ -47,9 +47,16 @@ margin-top: 6em;
   .about {
     display: block;
     font-size: 16px;
-    font-weight: 200;
+    
     line-height: 24px;
     width: 200px;
+    margin-left: 0;
+  }
+
+  .p {
+    width: 300px;
+    font-weight: 100;
+    line-height: 24px;
     margin-left: 0;
   }
 
@@ -59,7 +66,7 @@ margin-top: 6em;
   }
 
   .bg {
-    width: 390px;
+    width: 340px;
     height: 240px;
     margin-top: auto;
     margin-left: 10px;
