--- a/src/components/discription/firePlace/firePlace.module.css
+++ b/src/components/discription/firePlace/firePlace.module.css
@@ -48,9 +48,32 @@ text-align: left;
 }
 
 @media screen and (max-width: 500px) {
+  
 
-}
+  .bg {
+    position: absolute;
+    background: url(firePlice_bg_mobile.png) no-repeat;
+    margin-left: 30px;
+    width: 300px;
+    height: 140px;
+  }
 
-@media screen and (max-width: 400px) {
+  .stick {
+    display: inline-block;
+    width: 2px;
+    height: 250px;
+    background: #E97F04;
+    transform: matrix(1, 0, 0, -1, 0, 0);
+    margin-left: 20px;
+  }
 
+  .text {
+    display: inline-block;
+    width: 290px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+    margin-left: 20px;
+    margin-top: 200px;
+  }
 }
