--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -1,41 +1,6 @@
 .products {
-display: flex;
+
 width: 100%;
 height: 790px;
-background: #EEEEEE;
-text-align: center;
-}
-
-.stick {
-position: absolute;
-width: 390px;
-left: 765px;
-top: 4255px;
-
-background: #E97F04;
-transform: matrix(1, 0, 0, -1, 0, 0);
-}
-
-@media screen and (max-width: 2600px) and (min-width: 1600px) {
-
-}
-
-@media screen and (max-width: 1500px) {
-
-}
-
-@media screen and (max-width: 1100px) {
-
-}
-
-@media screen and (max-width: 800px) {
-
-}
-
-@media screen and (max-width: 500px) {
-
-}
-
-@media screen and (max-width: 400px) {
-
+background: #9e9e9e;
 }
