причесал main компненту

--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -25,7 +25,8 @@
 }
 
 .p {
-  font-size: 28px;
+  font-size: 24px;
+  line-height: 36px;
   margin-left: 2em;
   font-family: 'Roboto';
   color:#FFFFFF;
