--- a/src/components/discription/FireWoods/FireWoods.module.css
+++ b/src/components/discription/FireWoods/FireWoods.module.css
@@ -5,13 +5,13 @@
         -o-background-size: cover;
   background-size: cover;
   width: 100%;
-  height: 489px;
+  height: 40%;
   margin-top: 2em;
 }
 
 .title {
   padding-top: 1em;
-  margin-left: 12%;
+  margin-left: 10%;
   font-weight: 700;
   font-size: 46px;
   color: #FFFFFF;
@@ -20,8 +20,9 @@
 
 
 .text {
-  margin-top: 2em;
-  margin-left: 12%;
+  margin-top: 1em;
+  padding-bottom: 1em;
+  margin-left: 10%;
   font-weight: 600;
   font-size: 28px;
   color: #FFFFFF;
