--- a/src/components/products/Hardwoods/hardwoods.module.css
+++ b/src/components/products/Hardwoods/hardwoods.module.css
@@ -1,14 +1,21 @@
 .wrap {
- 
-  height: 734px;
+  height: 90%;
   background: #FFFFFF;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
-  margin-left: 5%;
-  margin-top: 2%;
+  margin: auto;
   border-radius: 20px;
+  width: 30%;
+  text-align: center;
+  padding: 2px;
+}
+
+.hardwood {
+  width: 80%;
+  height: 40%;
 }
 
 .title {
+  align-items: center;
   font-family: 'Roboto';
 }
 
