--- a/src/components/products/Mixed/mixed.module.css
+++ b/src/components/products/Mixed/mixed.module.css
@@ -1,11 +1,17 @@
 .wrap {
-  
-  height: 734px;
+  height: 90%;
+  width: 30%;
   background: #FFFFFF;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
-  margin-left: 5%;
-  margin-top: 2%;
   border-radius: 20px;
+  text-align: center;
+  padding: 2px;
+  margin: auto;
+}
+
+.mixed {
+  width: 80%;
+  height: 40%;
 }
 
 .title {
