--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -1,6 +1,6 @@
 .products {
-
-width: 100%;
-height: 790px;
-background: #9e9e9e;
+    display: flex;
+    width: 100%;
+    height: 790px;
+    background: #EEEEEE;
 }
