--- a/src/components/products/Hardwoods/hardwoods.module.css
+++ b/src/components/products/Hardwoods/hardwoods.module.css
@@ -27,11 +27,12 @@
 .discription {
   text-align: left;
   font-size: 18px;
-  padding: 20px;
+  margin: 10px 10px 50px 20px;
   font-family: 'Roboto';
 }
 
 .price {
+  margin: 5%;
   font-style: oblique;
   font-size: 19px;
   font-family: 'Roboto';
