--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,5 +1,6 @@
 .bg {
     display: flex;
+    justify-content: space-around;
     background: url(footer_bg.png) no-repeat center center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -7,32 +8,25 @@
         background-size: cover;  
     width: 100%;
     height: 327px;
-    margin-top: 23em;
+    margin-top: 5em;
     color: #fff;
-    font-family: 'Roboto';
-    text-align: left;
-}
-
-ul {
-    margin-left: 9%;
 }
 
 li {
     list-style: none;
-    align-items: center;
-    margin-top: 1em;
+    margin-top: 10%;
 }
 
 .title {
-    font-size: 32px;
+    font-family: 'Roboto';
+    font-size: 28px;
 }
 
 .unp {
-    margin-top: 6em;
     font-size: 18px;
+    margin-top: 5em;
 }
 
 .list {
-    font-size: 16px;
-    margin-top: 3em;
+    font-size: 18px;
 }
