--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,9 @@
 .title {
-padding-bottom: 3%;
-margin-left: 43%;
+margin-top: 2em;
+text-align: center;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 600;
 font-size: 42px;
-line-height: 54px;
 color: #000000;
 }
