--- a/src/components/about_us/about.module.css
+++ b/src/components/about_us/about.module.css
@@ -4,6 +4,7 @@
   margin-right: auto;
   height: 2px;
   padding-top: 3em;
+  width: 50%;
 }
 
 .aboutUs {
@@ -13,13 +14,13 @@
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
-  line-height: 38px;
+  line-height: 35px;
 }
 
 .firewoods {
   margin: 2em;
   width: 35%;
-  height: 40%;
+  height: 60%;
 }
 
 .content {
@@ -29,4 +30,44 @@
 .title {
   font-size: 46px;
   font-weight: 700;
+}
+
+@media (max-width: 900px) {
+  .aboutUs {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .firewoods {
+    margin-top: 6em;
+  }
+}
+
+@media (max-width: 500px) {
+  .stick {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 2px;
+    width: 60%;
+    padding-top: 3em;
+  }
+  
+  .aboutUs {
+    display: block;
+    font-weight: 400;
+    font-size: 16px;
+  }
+  
+  .firewoods {
+    margin: 1.5em;
+    width: 65%;
+    height: 50%;
+  }
+  
+  .title {
+    font-size: 46px;
+    font-weight: 700;
+  }
 }
