--- a/src/components/discription/FireWoods/FireWoods.module.css
+++ b/src/components/discription/FireWoods/FireWoods.module.css
@@ -29,3 +29,25 @@
   color: #FFFFFF;
   font-family: 'Roboto';
 }
+
+@media (max-width: 500px) {
+  .bg {
+    background: url(fireWoods_bg_mobile.png) no-repeat;
+    width: 100%;
+    height: 440px;
+    margin-top: 2em;
+  }
+  
+  .title {
+    padding-top: 1rem;
+    font-weight: 600;
+    font-size: 36px;
+  }
+  
+  
+  .text {
+    font-weight: 300;
+    font-size: 18px;
+    width: 85%;
+  }
+}
