--- a/src/components/discription/firePlace/firePlace.module.css
+++ b/src/components/discription/firePlace/firePlace.module.css
@@ -4,6 +4,11 @@
   margin-left: 4em;
 }
 
+.wrap1 {
+  display: flex;
+  width: 90%;
+}
+
 .stick {
   margin-top: 1rem;
   width: 2px;
@@ -18,11 +23,40 @@
 }
 
 .text {
-  width: 40%;
+  width: 70%;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
   line-height: 1.5em;
   text-align: left;
+}
+
+@media (max-width: 500px) {
+  .wrap {
+    display: block;
+    margin-top: 4em;
+    margin-left: 1em;
+  }
+  
+  .stick {
+    margin-top: 1rem;
+    width: 2px;
+    height: 24em;
+    margin-left: 1rem;
+    margin-right: 1em;
+  }
+  
+  .firePlace {
+    width: 95%;
+    height: 200px;
+  }
+  
+  .text {
+    width: 90%;
+    font-weight: 300;
+    font-size: 19px;
+    line-height: 1.5em;
+    text-align: left;
+  }
 }
