--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -30,3 +30,38 @@ li {
 .list {
     font-size: 18px;
 }
+
+@media (max-width: 500px) {
+    .bg {
+        display: block;
+        justify-content: space-around;
+        background: url(footer_bg_mobile.png) no-repeat;
+        width: 100%;
+        height: 440px;
+        margin-top: 5em;
+        color: #fff;
+    }
+
+    ul {
+        margin-top: 10%;
+    }
+    
+    li {
+        list-style: none;
+        margin-top: 3%;
+    }
+    
+    .title {
+        font-family: 'Roboto';
+        font-size: 22px;
+    }
+    
+    .unp {
+        font-size: 16px;
+        margin-top: 1em;
+    }
+    
+    .list {
+        font-size: 16px;
+    }
+}
