--- a/src/components/products/Conifers/conifers.module.css
+++ b/src/components/products/Conifers/conifers.module.css
@@ -42,3 +42,38 @@ bold {
   margin-left: 5px;
   color: orange;
 }
+
+@media (max-width: 500px) {
+  .wrap {
+    display: none;
+  }
+  
+  .conficers {
+    width: 80%;
+    height: 40%;
+  }
+  
+  .title {
+    font-family: 'Roboto';
+  }
+  
+  .minititle {
+    font-size: 24px;
+    font-family: 'Roboto';
+  }
+  
+  .discription {
+    text-align: left;
+    font-size: 18px;
+    margin: 10px 10px 50px 20px;
+    font-family: 'Roboto';
+  }
+  
+  .price {
+    margin: 5%;
+    font-style: oblique;
+    font-size: 19px;
+    font-family: 'Roboto';
+    font-weight: 600;
+  }  
+}
