--- a/src/components/products/Hardwoods/hardwoods.module.css
+++ b/src/components/products/Hardwoods/hardwoods.module.css
@@ -42,3 +42,38 @@
 bold {
   color: orange;
 }
+
+@media (max-width: 500px) {
+  .wrap {
+    height: 550px;
+    width: 300px;
+  }
+
+  .title {
+    font-size: 28px;
+  }
+  
+  .minititle {
+    font-size: 20px;
+  }
+
+  .hardwood {
+    width: 70%;
+    height: 30%;
+  }
+  
+  .discription {
+    text-align: left;
+    font-size: 16px;
+    margin: 10px 10px 50px 20px;
+    font-family: 'Roboto';
+  }
+  
+  .price {
+    margin: 5%;
+    font-style: oblique;
+    font-size: 19px;
+    font-family: 'Roboto';
+    font-weight: 600;
+  }
+}
