--- a/src/components/products/Mixed/mixed.module.css
+++ b/src/components/products/Mixed/mixed.module.css
@@ -36,3 +36,33 @@
 bold {
   color: orange;
 }
+
+@media (max-width: 500px) {
+  .wrap {
+    display: none;
+  }
+  
+  .mixed {
+    width: 80%;
+    height: 40%;
+  }
+  
+  .title {
+    font-family: 'Roboto';
+  }
+  
+  .discription {
+    text-align: left;
+    font-size: 18px;
+    margin: 90px 10px 50px 20px;
+    font-family: 'Roboto';
+  }
+  
+  .price {
+    margin: 5%;
+    font-style: oblique;
+    font-size: 19px;
+    font-family: 'Roboto';
+    font-weight: 600;
+  }
+}
