--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -37,13 +37,14 @@ li {
         justify-content: space-around;
         background: url(footer_bg_mobile.png) no-repeat;
         width: 100%;
-        height: 440px;
+        height: 540px;
         margin-top: 3em;
         color: #fff;
     }
 
     ul {
         margin-top: 10%;
+        padding-top: 3%;
     }
     
     li {
