--- a/src/components/products/Mixed/mixed.module.css
+++ b/src/components/products/Mixed/mixed.module.css
@@ -33,14 +33,20 @@
   font-weight: 600;
 }
 
-bold {
+span {
   color: orange;
 }
 
 @media (max-width: 500px) {
+
+  .wrap {
+    height: 550px;
+    width: 300px;
+  }
+
   .mixed {
-    width: 80%;
-    height: 40%;
+    width: 70%;
+    height: 30%;
   }
   
   .title {
@@ -50,7 +56,7 @@ bold {
   .discription {
     text-align: left;
     font-size: 18px;
-    margin: 90px 10px 50px 20px;
+    margin: 40px 10px 50px 20px;
     font-family: 'Roboto';
   }
   
