--- a/src/Admin/AdminPanel.module.css
+++ b/src/Admin/AdminPanel.module.css
@@ -15,12 +15,14 @@
   }
   
   .conficers {
-    width: 80%;
+    width: 60%;
     height: 40%;
   }
   
   .title {
+    color: black;
     font-family: 'Roboto';
+    font-size: 24px;
   }
   
   .minititle {
