--- a/src/Admin/AdminPanel.module.css
+++ b/src/Admin/AdminPanel.module.css
@@ -4,7 +4,7 @@
 }
 
 .wrap {
-    height: 10em;
+    height: 6em;
     width: 30%;
     background: #FFFFFF;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
@@ -12,6 +12,10 @@
     border-radius: 20px;
     text-align: center;
     padding: 2px;
+  }
+
+  .wr {
+    margin: 15px 10px 10px 10px;
   }
   
   .conficers {
@@ -44,4 +48,16 @@
     font-family: 'Roboto';
     font-weight: 600;
   }
+
+  .flexBtn {
+    display: flex;
+    justify-content: center;
+  }
   
+  .btn {
+    text-align: center;
+    width: 120px;
+    height: 30px;
+    border-radius: 10px;
+    border: 1px solid black;
+  }
