--- a/src/components/products/Conifers/conifers.module.css
+++ b/src/components/products/Conifers/conifers.module.css
@@ -15,11 +15,16 @@
 }
 
 .title {
+  font-size: 36px;
+  margin: 10px 10px 15px 10px;
+  font-weight: 600;
   font-family: 'Roboto';
 }
 
 .minititle {
   font-size: 24px;
+  margin-top: 10px;
+  font-weight: 600;
   font-family: 'Roboto';
 }
 
@@ -38,8 +43,8 @@
   font-weight: 600;
 }
 
-span {
-  margin-left: 5px;
+.sum {
+  margin-left: 10px;
   color: orange;
 }
 
