--- a/src/components/products/Mixed/mixed.module.css
+++ b/src/components/products/Mixed/mixed.module.css
@@ -15,13 +15,16 @@
 }
 
 .title {
+  font-size: 36px;
+  margin: 10px 10px 15px 10px;
+  font-weight: 600;
   font-family: 'Roboto';
 }
 
 .discription {
   text-align: left;
   font-size: 18px;
-  margin: 90px 10px 50px 20px;
+  margin: 50px 10px 50px 20px;
   font-family: 'Roboto';
 }
 
@@ -33,7 +36,8 @@
   font-weight: 600;
 }
 
-span {
+.sum {
+  margin-left: 10px;
   color: orange;
 }
 
