--- a/src/Admin/AdminPanel.module.css
+++ b/src/Admin/AdminPanel.module.css
@@ -4,14 +4,14 @@
 }
 
 .wrap {
-    height: 6em;
+    height: 8em;
     width: 30%;
     background: #FFFFFF;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
     margin: auto;
     border-radius: 20px;
     text-align: center;
-    padding: 2px;
+    padding: 10px;
   }
 
   .wr {
@@ -49,15 +49,27 @@
     font-weight: 600;
   }
 
-  .flexBtn {
-    display: flex;
-    justify-content: center;
-  }
-  
   .btn {
+    background-color: rgb(222, 222, 222);
+    margin-left: 45%;
+    margin-bottom: 4em;
     text-align: center;
     width: 120px;
     height: 30px;
     border-radius: 10px;
     border: 1px solid black;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px 1px black;
+  }
+
+  .btn:active {
+    background-color: rgb(221, 251, 169);
+    box-shadow: 0px 0px 0px 0px rgb(193, 249, 123);
+  }
+
+  .changePrice {
+    width: 7em;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 2em 15em 5em 10em;
   }
